Fix overflow for actions menu

--- a/services/ui-src/src/index.scss
+++ b/services/ui-src/src/index.scss
@@ -2481,7 +2481,6 @@ aside#faq-contact-info-box {
 
   .dashboard-and-alert-bar {
     flex: 1;
-    overflow-x: auto;
   }
 
   .filter-pane {
